feat(Result): 테스트 메서드 및 setter 추가